--- a/project-3.html
+++ b/project-3.html
@@ -1,67 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Udacity Project 4">
-    <meta name="author" content="Luiz Arantes Sa">
-    <title>Luiz Arantes Sa: Portfolio</title>
-
-    <!-- Google Analytics (Asynchronous to improve page load speed) -->
-    <script async src='//www.google-analytics.com/analytics.js'></script>
-    <script>
-      window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-      // TODO: replace with your Google Analytics profile ID.
-      ga('create', 'UA-XXXX-Y', 'auto');
-      ga('send', 'pageview');
-
-      // Navigation Timing
-      window.addEventListener("load", function(event) {
-        var t = window.performance.timing,
-            dcl = t.domContentLoadedEventStart - t.domLoading,
-            complete = t.domComplete - t.domLoading;
-        var stats = document.getElementById("crp-stats");
-        stats.textContent = 'DCL: ' + dcl + 'ms, onload: ' + complete + 'ms';
-      });
-
-      // Fetch 'Open Sans' font with javaScript to prevent css render blocking
-      // https://developers.google.com/speed/docs/insights/OptimizeCSSDelivery
-      var cb = function() {
-        var l = document.createElement('link'); l.rel = 'stylesheet';
-        l.href = '//fonts.googleapis.com/css?family=Open+Sans:400,700';
-        var h = document.getElementsByTagName('head')[0]; h.parentNode.insertBefore(l, h);
-      };
-      var raf = requestAnimationFrame || mozRequestAnimationFrame ||
-          webkitRequestAnimationFrame || msRequestAnimationFrame;
-      if (raf) raf(cb);
-      else window.addEventListener('load', cb);
-
-    </script>
-    <!-- Add media print on print css to prevent render blocking-->
-    <link href="css/print.css" rel="stylesheet" media="print">
-    <!-- Development link -->
-    <link href="css/style.css" rel="stylesheet">
-  </head>
-
-  <body>
-    <div class="container">
-      <header>
-        <a href="/"><img id="hero-img" width="70" height="70" src="img/profilepic.png"></a>
-        <p id="header-info"><strong>Luiz Arantes Sa</strong><br><span id="header-span">Web Developer</span></p>
-      </header>
-      <div class="hero">
-        <p><strong>My first video game!</strong> In this project I learned JavaScript’s object oriented programming features and how to break down a complex problem into manageable sub-problems to create a well-architected application.</p>
-      </div>
-
-      <div class="content">
-        <img  class="img-responsive" width="602" height="618" src="img/p3-original.png">
-        <p>View project on <a href="https://github.com/LuizGsa21/p3-arcade-game">GitHub</a></p>
-      </div>
-
-      <a href="index.html">Back to Home Page</a>
-      <footer>
-        <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
-      </footer>
-    </div>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1"> <meta name="description" content="Udacity Project 4"> <meta name="author" content="Luiz Arantes Sa"> <title>Luiz Arantes Sa: Portfolio</title> <script async src='//www.google-analytics.com/analytics.js'></script> <script>(function(a,b){a.GoogleAnalyticsObject=b;a[b]=a[b]||function(){(a[b].q=a[b].q||[]).push(arguments)};a[b].l=1*new Date})(window,"ga");ga("create","UA-XXXX-Y");ga("send","pageview");function logCRP(){var a=window.performance.timing,b=a.domContentLoadedEventStart-a.domLoading,a=a.domComplete-a.domLoading;document.getElementById("crp-stats").textContent="DCL: "+b+"ms, onload: "+a+"ms"}window.addEventListener("load",function(a){logCRP()}); var cb=function(){var a=document.createElement("link");a.rel="stylesheet";a.href="//fonts.googleapis.com/css?family=Open+Sans:400,700";var b=document.getElementsByTagName("head")[0];b.parentNode.insertBefore(a,b)},raf=requestAnimationFrame||mozRequestAnimationFrame||webkitRequestAnimationFrame||msRequestAnimationFrame;raf?raf(cb):window.addEventListener("load",cb);</script> <link href="css/print.css" rel="stylesheet" media="print"> <style>body{font:400 14px/1.61 "Open Sans",sans-serif;margin:0;background:#fff;color:#333}.container{margin:0 auto;max-width:45em}a{color:#12C}a:visited{color:#61C}a:focus{outline:dotted thin}a:active,a:hover{color:#c00}header{color:#C90B0B;padding:0 .5em}#header-info{font-size:1.5em;padding-left:4em}.hero{background-color:#f8f8f8;border-bottom:1px solid #ccc;border-top:1px solid #ccc;font-size:1.2em;padding:2em}#hero-img{border-radius:40px;float:left}#header-span{font-size:.8em;font-weight:400}.project-list{margin:1em 0;padding:0 0 0 20px}.content{padding:1em}.project-list li{display:inline-block;font-size:1.1em;list-style-type:none}.project-list img{float:left;padding-right:1em}.project-list p{display:block;font-size:.9em;font-style:italic}.img-responsive{display:block;max-width:100%;height:auto}footer{border-top:1px solid #ccc;padding:0 .5em}#crp-stats{float:right;font-style:italic}@media only screen and (max-width:480px){body{font-size:12px}#header-info{padding-left:4.5em}}</style> </head> <body> <div class="container"> <header> <a href="/"><img id="hero-img" width="70" height="70" src="img/profilepic.png"></a> <p id="header-info"><strong>Luiz Arantes Sa</strong><br><span id="header-span">Web Developer</span></p></header> <div class="hero"> <p><strong>My first video game!</strong> In this project I learned JavaScript’s object oriented programming features and how to break down a complex problem into manageable sub-problems to create a well-architected application.</p></div><div class="content"> <img class="img-responsive" width="602" height="618" src="img/p3-original.png"> <p>View project on <a href="https://github.com/LuizGsa21/p3-arcade-game">GitHub</a></p></div><a href="index.html">Back to Home Page</a> <footer> <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p></footer> </div></body></html>
