--- a/index.html
+++ b/index.html
@@ -39,8 +39,125 @@
     </script>
     <!-- Add media print on print css to prevent render blocking-->
     <link href="css/print.css" rel="stylesheet" media="print">
-    <!-- Development link -->
-    <link href="css/style.css" rel="stylesheet">
+    <style>
+      /* Main body */
+
+      body {
+        background: #fff;
+        color: #333;
+        font: 400 14px/1.61 "Open Sans", sans-serif;
+        margin: 0;
+      }
+
+      .container {
+        margin: 0 auto;
+        max-width: 45em;
+      }
+
+      a {
+        color: #12C;
+      }
+
+      a:visited {
+        color: #61C;
+      }
+
+      a:focus {
+        outline: thin dotted;
+      }
+
+      a:hover, a:active {
+        color: #c00;
+      }
+
+      /* Header */
+
+      header {
+        color: #C90B0B;
+        padding: 0 0.5em;
+      }
+
+      #header-info {
+        font-size: 1.5em;
+        padding-left: 4em;
+      }
+
+      .hero {
+        background-color: #f8f8f8;
+        border-bottom: 1px solid #ccc;
+        border-top: 1px solid #ccc;
+        font-size: 1.2em;
+        padding: 2em;
+      }
+
+      #hero-img {
+        border-radius: 40px;
+        float: left;
+      }
+
+      #header-span {
+        font-size: 0.8em;
+        font-weight: normal;
+      }
+
+      /* Main content */
+
+      .project-list {
+        margin: 1em 0;
+        padding: 0 0 0 20px;
+      }
+
+      .content {
+        padding: 1em 1em;
+      }
+
+      .project-list li {
+        display: inline-block;
+        font-size: 1.1em;
+        list-style-type: none;
+      }
+
+      .project-list img {
+        float: left;
+        padding-right: 1em;
+      }
+
+      .project-list p {
+        display: block;
+        font-size: 0.9em;
+        font-style: italic;
+      }
+
+      .img-responsive {
+        display: block;
+        height: auto \9;
+        max-width: 100%;
+        width: 100%;
+      }
+
+      /* Footer */
+      footer {
+        border-top: 1px solid #ccc;
+        padding: 0 0.5em;
+      }
+
+      #crp-stats {
+        float: right;
+        font-style: italic;
+      }
+
+      /* Smartphones (portrait) */
+      @media only screen and (max-width: 480px) {
+
+        body {
+          font-size: 12px;
+        }
+
+        #header-info {
+          padding-left: 4.5em;
+        }
+      }
+    </style>
   </head>
   <body>
     <div class="container">
