--- a/project-1.html
+++ b/project-1.html
@@ -11,8 +11,7 @@
     <script async src='//www.google-analytics.com/analytics.js'></script>
     <script>
       window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-      // TODO: replace with your Google Analytics profile ID.
-      ga('create', 'UA-XXXX-Y', 'auto');
+      ga('create', 'UA-58074685-1', 'auto');
       ga('send', 'pageview');
 
       // Navigation Timing
@@ -37,6 +36,7 @@
       else window.addEventListener('load', cb);
 
     </script>
+
     <!-- Add media print on print css to prevent render blocking-->
     <link href="css/print.css" rel="stylesheet" media="print">
     <style>
