--- a/project-3.html
+++ b/project-3.html
@@ -11,8 +11,7 @@
     <script async src='//www.google-analytics.com/analytics.js'></script>
     <script>
       window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
-      // TODO: replace with your Google Analytics profile ID.
-      ga('create', 'UA-XXXX-Y', 'auto');
+      ga('create', 'UA-58074685-1', 'auto');
       ga('send', 'pageview');
 
       // Navigation Timing
