Made font size bigger

--- a/pizza.html
+++ b/pizza.html
@@ -1,6 +1,10 @@
-<!DOCTYPE HTML>
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="description" content="Udacity Project 4">
+  <meta name="author" content="Luiz Arantes Sa">
   <style>
     * {
       -moz-box-sizing: border-box;
@@ -10,7 +14,7 @@
 
     body {
       background: black;
-      font-family: "Trebuchet MS", Helvetica, sans-serif;
+      font: 400 16px/1.61 "Trebuchet MS", Helvetica, sans-serif;
     }
 
     input {
