Add center class

--- a/pizza.html
+++ b/pizza.html
@@ -149,8 +149,7 @@
   </style>
 </head>
 <body>
-  <div id="movingPizzas1">
-  </div>
+  <div id="movingPizzas1"></div>
   <div class="container">
     <div id="header" class="row">
       <div class="col-md-12">
@@ -217,7 +216,7 @@
     </div>
     <div id="locations" class="row">
       <div class="col-md-12">
-        <h2 style="text-align: center">Locations!</h2>
+        <h2 class="centered">Locations!</h2>
 
         <div class="row">
           <div class="col-md-6">
@@ -235,7 +234,7 @@
     </div>
     <div id="pizzaGenerator" class="row">
       <div class="col-md-12">
-        <h2 style="text-align: center">Our Pizzas!</h2>
+        <h2 class="centered">Our Pizzas!</h2>
 
         <div class="row">
           <div class="col-md-12">
@@ -246,9 +245,9 @@
             <input id="sizeSlider" type="range" min="1" max="3" value="2" step="1" onchange="resizePizzas(this.value)">
           </div>
         </div>
-        <div id="randomPizzas" class="row"></div>
       </div>
     </div>
+    <div id="randomPizzas" class="row"></div>
     <div id="footer" class="col-md-12">Thanks for visiting! &copy; 2014 Udacity</div>
   </div>
   <script type="text/javascript" src="js/main.js"></script>
