--- a/project-1.html
+++ b/project-1.html
@@ -89,37 +89,10 @@
 
       /* Main content */
 
-      .project-list {
-        margin: 1em 0;
-        padding: 0 0 0 20px;
-      }
-
-      .content {
-        padding: 1em 1em;
-      }
-
-      .project-list li {
-        display: inline-block;
-        font-size: 1.1em;
-        list-style-type: none;
-      }
-
-      .project-list img {
-        float: left;
-        padding-right: 1em;
-      }
-
-      .project-list p {
-        display: block;
-        font-size: 0.9em;
-        font-style: italic;
-      }
-
       .img-responsive {
         display: block;
         height: auto \9;
         max-width: 100%;
-        width: 100%;
       }
 
       /* Footer */
@@ -154,7 +127,7 @@
         <p id="header-info"><strong>Luiz Arantes Sa</strong><br><span id="header-span">Web Developer</span></p>
       </header>
       <div class="hero">
-        <p><strong>Creating my first mockup website was awesome!</strong> In this project I learned how HTML is used to define the content of a web page and how to treat the page content as boxes on the screen to easily replicate any design. </p>
+        <p><strong>Creating my first mockup website was awesome!</strong> In this project I learned how HTML is used to define the content of a web page and how to treat page content as boxes on the screen to easily replicate any design. </p>
       </div>
 
       <div class="content">
