--- a/index.html
+++ b/index.html
@@ -10,18 +10,7 @@
     <!-- Google Analytics (Asynchronous to improve page load speed) -->
     <script async src='//www.google-analytics.com/analytics.js'></script>
     <script async src="js/analytics.js"></script>
-    <script>
-      // Fetch 'Open Sans' font with javaScript to prevent css render blocking
-      // https://developers.google.com/speed/docs/insights/OptimizeCSSDelivery
-      var cb = function() {
-        var l = document.createElement('link'); l.rel = 'stylesheet';
-        l.href = '//fonts.googleapis.com/css?family=Open+Sans:400,700';
-        var h = document.getElementsByTagName('head')[0]; h.parentNode.insertBefore(l, h);
-      };
-      var raf = requestAnimationFrame || mozRequestAnimationFrame ||
-          webkitRequestAnimationFrame || msRequestAnimationFrame;
-      if (raf) raf(cb);
-      else window.addEventListener('load', cb);
+    <script>var cb=function(){var e=document.createElement("link");e.rel="stylesheet";e.href="//fonts.googleapis.com/css?family=Open+Sans:400,700";var t=document.getElementsByTagName("head")[0];t.parentNode.insertBefore(e,t)};var raf=requestAnimationFrame||mozRequestAnimationFrame||webkitRequestAnimationFrame||msRequestAnimationFrame;if(raf)raf(cb);else window.addEventListener("load",cb)
     </script>
     <!-- Add media print on print css to prevent render blocking-->
     <link href="css/print.css" rel="stylesheet" media="print">
