--- a/project-1.html
+++ b/project-1.html
@@ -1,132 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Udacity Project 4">
-    <meta name="author" content="Luiz Arantes Sa">
-    <title>Luiz Arantes Sa: Portfolio</title>
-
-    <!-- Google Analytics (Asynchronous to improve page load speed) -->
-    <script async src='//www.google-analytics.com/analytics.js'></script>
-    <script async src="js/analytics.js"></script>
-    <script>var cb=function(){var e=document.createElement("link");e.rel="stylesheet";e.href="//fonts.googleapis.com/css?family=Open+Sans:400,700";var t=document.getElementsByTagName("head")[0];t.parentNode.insertBefore(e,t)};var raf=requestAnimationFrame||mozRequestAnimationFrame||webkitRequestAnimationFrame||msRequestAnimationFrame;if(raf)raf(cb);else window.addEventListener("load",cb)</script>
-
-    <!-- Add media print on print css to prevent render blocking-->
-    <link href="css/print.css" rel="stylesheet" media="print">
-    <style>
-      /* Main body */
-
-      body {
-        background: #fff;
-        color: #333;
-        font: 400 14px/1.61 "Open Sans", sans-serif;
-        margin: 0;
-      }
-
-      .container {
-        margin: 0 auto;
-        max-width: 45em;
-      }
-
-      a {
-        color: #12C;
-      }
-
-      a:visited {
-        color: #61C;
-      }
-
-      a:focus {
-        outline: thin dotted;
-      }
-
-      a:hover, a:active {
-        color: #c00;
-      }
-
-      /* Header */
-
-      header {
-        color: #C90B0B;
-        padding: 0 0.5em;
-      }
-
-      #header-info {
-        font-size: 1.5em;
-        padding-left: 4em;
-      }
-
-      .hero {
-        background-color: #f8f8f8;
-        border-bottom: 1px solid #ccc;
-        border-top: 1px solid #ccc;
-        font-size: 1.2em;
-        padding: 2em;
-      }
-
-      #hero-img {
-        border-radius: 40px;
-        float: left;
-      }
-
-      #header-span {
-        font-size: 0.8em;
-        font-weight: normal;
-      }
-
-      /* Main content */
-
-      .img-responsive {
-        display: block;
-        height: auto \9;
-        max-width: 100%;
-      }
-
-      /* Footer */
-      footer {
-        border-top: 1px solid #ccc;
-        padding: 0 0.5em;
-      }
-
-      #crp-stats {
-        float: right;
-        font-style: italic;
-      }
-
-      /* Smartphones (portrait) */
-      @media only screen and (max-width: 480px) {
-
-        body {
-          font-size: 12px;
-        }
-
-        #header-info {
-          padding-left: 4.5em;
-        }
-      }
-    </style>
-  </head>
-
-  <body>
-    <div class="container">
-      <header>
-        <a href="/"><img id="hero-img" width="70" height="70" src="img/profilepic.png"></a>
-        <p id="header-info"><strong>Luiz Arantes Sa</strong><br><span id="header-span">Web Developer</span></p>
-      </header>
-      <div class="hero">
-        <p><strong>Creating my first mockup website was awesome!</strong> In this project I learned how HTML is used to define the content of a web page and how to treat page content as boxes on the screen to easily replicate any design. </p>
-      </div>
-
-      <div class="content">
-        <img class="img-responsive" width="602" height="496" src="img/p1-original.jpg">
-        <p>View project on <a href="http://github.com/LuizGsa21/p1-mockup">GitHub</a></p>
-      </div>
-
-      <a href="index.html">Back to Home Page</a>
-      <footer>
-        <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
-      </footer>
-    </div>
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"> <head> <meta charset="UTF-8"> <meta name="viewport" content="width=device-width, initial-scale=1"> <meta name="description" content="Udacity Project 4"> <meta name="author" content="Luiz Arantes Sa"> <title>Luiz Arantes Sa: Portfolio</title> <script async src='//www.google-analytics.com/analytics.js'></script> <script async src="js/analytics.js"></script> <script>var cb=function(){var e=document.createElement("link");e.rel="stylesheet";e.href="//fonts.googleapis.com/css?family=Open+Sans:400,700";var t=document.getElementsByTagName("head")[0];t.parentNode.insertBefore(e,t)};var raf=requestAnimationFrame||mozRequestAnimationFrame||webkitRequestAnimationFrame||msRequestAnimationFrame;if(raf)raf(cb);else window.addEventListener("load",cb)</script> <link href="css/print.css" rel="stylesheet" media="print"> <style>/* Main body */ body{background: #fff; color: #333; font: 400 14px/1.61 "Open Sans", sans-serif; margin: 0;}.container{margin: 0 auto; max-width: 45em;}a{color: #12C;}a:visited{color: #61C;}a:focus{outline: thin dotted;}a:hover, a:active{color: #c00;}/* Header */ header{color: #C90B0B; padding: 0 0.5em;}#header-info{font-size: 1.5em; padding-left: 4em;}.hero{background-color: #f8f8f8; border-bottom: 1px solid #ccc; border-top: 1px solid #ccc; font-size: 1.2em; padding: 2em;}#hero-img{border-radius: 40px; float: left;}#header-span{font-size: 0.8em; font-weight: normal;}/* Main content */ .img-responsive{display: block; height: auto \9; max-width: 100%;}/* Footer */ footer{border-top: 1px solid #ccc; padding: 0 0.5em;}#crp-stats{float: right; font-style: italic;}/* Smartphones (portrait) */ @media only screen and (max-width: 480px){body{font-size: 12px;}#header-info{padding-left: 4.5em;}}</style> </head> <body> <div class="container"> <header> <a href="/"><img id="hero-img" width="70" height="70" src="img/profilepic.png"></a> <p id="header-info"><strong>Luiz Arantes Sa</strong><br><span id="header-span">Web Developer</span></p></header> <div class="hero"> <p><strong>Creating my first mockup website was awesome!</strong> In this project I learned how HTML is used to define the content of a web page and how to treat page content as boxes on the screen to easily replicate any design. </p></div><div class="content"> <img class="img-responsive" width="602" height="496" src="img/p1-original.jpg"> <p>View project on <a href="http://github.com/LuizGsa21/p1-mockup">GitHub</a></p></div><a href="index.html">Back to Home Page</a> <footer> <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p></footer> </div></body></html>
