Fix images that were not being responsive...

--- a/index.html
+++ b/index.html
@@ -116,8 +116,7 @@
 
       .img-responsive {
         display: block;
-        height: auto \9;
-        max-width: 100%;
+        height: auto;
         width: 100%;
       }
 
