--- a/pizza.html
+++ b/pizza.html
@@ -28,9 +28,8 @@
 
     .img-responsive {
       display: block;
-      width: 100% \9;
-      max-width: 100%;
       height: auto;
+      width: 100%;
     }
 
     img {
