--- a/project-1.html
+++ b/project-1.html
@@ -91,8 +91,8 @@
 
       .img-responsive {
         display: block;
-        height: auto \9;
-        max-width: 100%;
+        height: auto;
+        width: 100%;
       }
 
       /* Footer */
